# PacMan_Arduino_as_Component

./: .gitignore  CMakeLists-ToBeUsedAsArduinoComponent.txt  CMakeLists.txt  README.md  READ_ME_clone_arduino_as_component.txt  sdkconfig  sdkconfig.esp32s2  sdkconfig.esp32s3
components/arduino/: CMakeLists.txt
components/esp_lcd_ra8875/: idf_component.yml
components/esp_lcd_rm68120/: CMakeLists.txt  README.md  esp_lcd_rm68120.c  idf_component.yml
components/esp_lcd_rm68120/include/: esp_lcd_rm68120.h
main/: CMakeLists.txt  pacman.ino.cpp  pacmanTiles.h
main/Arduino_libs/: Game_Audio.cpp
main/board/: board_custom.h  board_espbox.h  board_hmi.h
main/bsp/: bsp.c  bsp.h
main/display/: lcd.h  lcd_parallel.c
